--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "DION MARIOKASS CLI"
+name: "Chhaava HINDI 2025 Free Download: DCCtg4U, 6xFlix"
 author: "dionmarioka"
 description: "Setup AWS CLI to use in github actions"
 branding:
